--- a/index.html
+++ b/index.html
@@ -8,56 +8,66 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/languages/json.min.js"></script>
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <style>
-    body {
-      background-color: #f8f9fa;
-    }
-    .container {
-      background-color: #ffffff;
-      border-radius: 10px;
-      padding: 20px;
-      margin-top: 20px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    }
-  </style>
   <body>
-    <div class="container">
-      <h1 class="my-3 text-center fw-lighter">Gorgeous Swagger Converter</h1>
-      <div class="form">
-        <textarea
-          class="form-control"
-          placeholder="Paste your JSON here..."
-          id="inputJson"
-          style="height: 100px"
-        ></textarea>
-      </div>
-      <div class="d-flex justify-content-end">
-        <button onclick="convertJson()" class="btn btn-primary my-3">
-          Convert
-        </button>
-      </div>
-      <div class="form">
-        <textarea
-          class="form-control"
-          placeholder="Converted JSON will appear here..."
-          id="outputJson"
-          style="height: 500px"
-        ></textarea>
+    <div class="container my-5">
+      <div class="card">
+        <div class="card-body">
+          <h1 class="card-title text-center mb-4 fw-light">
+            Gorgeous Swagger Converter
+          </h1>
+          <div class="mb-3">
+            <label for="inputJson" class="form-label fw-bold">Input JSON</label>
+            <textarea
+              class="form-control"
+              id="inputJson"
+              rows="5"
+              style="resize: none"
+              placeholder="Paste your JSON here..."
+            ></textarea>
+          </div>
+          <div class="d-grid gap-2 mb-3">
+            <button onclick="convertJson()" class="btn btn-primary">
+              <i class="fas fa-exchange-alt me-2"></i> Convert
+            </button>
+          </div>
+          <div id="outputBlock" style="display: none">
+            <div class="mb-3">
+              <label for="outputJson" class="form-label fw-bold"
+                >Output JSON</label
+              >
+              <div id="outputContainer">
+                <pre><code id="outputJson" class="json"></code></pre>
+              </div>
+            </div>
+            <div class="d-grid gap-2">
+              <button
+                id="copyButton"
+                onclick="copyOutput()"
+                class="btn btn-secondary"
+              >
+                <i id="copyIcon" class="fas fa-copy me-2"></i>
+                <span id="copyText">Copy</span>
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
+    <script></script>
   </body>
 </html>
