--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
           </div>
         </div>
       </div>
+      <div id="floatingAlert" class="floating-alert">
+        <div class="alert-content">
+          <div class="alert-icon">
+            <i class="fas fa-exclamation-circle"></i>
+          </div>
+          <div class="alert-message">
+            <h4>Invalid JSON Input</h4>
+            <p id="alertMessage"></p>
+          </div>
+        </div>
+        <button id="closeAlert" class="close-btn">&times;</button>
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
