--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
               />
             </div>
             <div class="col-md-6">
-              <label for="inputLocalUrl" class="form-label">Local URL</label>
+              <div class="form-check mb-2">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  id="enableLocalUrl"
+                />
+                <label class="form-check-label" for="enableLocalUrl">
+                  Local URL
+                </label>
+              </div>
               <div class="input-group">
                 <span class="input-group-text">localhost:</span>
                 <input
@@ -52,7 +61,16 @@
               </div>
             </div>
             <div class="col-md-6">
-              <label for="inputRemoteUrl" class="form-label">Remote URL</label>
+              <div class="form-check mb-2">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  id="enableRemoteUrl"
+                />
+                <label class="form-check-label" for="enableRemoteUrl">
+                  Remote URL
+                </label>
+              </div>
               <div class="input-group">
                 <span class="input-group-text">https://</span>
                 <input
@@ -92,21 +110,94 @@
             </button>
           </div>
           <div id="outputBlock" style="display: none">
-            <div class="mb-3">
-              <label for="outputJson" class="form-label">Output JSON</label>
-              <div id="outputContainer">
-                <pre><code id="outputJson" class="json"></code></pre>
-              </div>
-            </div>
-            <div class="d-grid gap-2">
-              <button
-                id="copyButton"
-                onclick="copyOutput()"
-                class="btn btn-secondary"
+            <ul class="nav nav-tabs mb-3" id="outputTabs" role="tablist">
+              <li class="nav-item" role="presentation">
+                <button
+                  class="nav-link active"
+                  id="output-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#outputJsonBlock"
+                  type="button"
+                  role="tab"
+                  aria-controls="outputJsonBlock"
+                  aria-selected="true"
+                >
+                  Output JSON
+                </button>
+              </li>
+              <li class="nav-item" role="presentation">
+                <button
+                  class="nav-link"
+                  id="permission-tab"
+                  data-bs-toggle="tab"
+                  data-bs-target="#permissionGenerator"
+                  type="button"
+                  role="tab"
+                  aria-controls="permissionGenerator"
+                  aria-selected="false"
+                >
+                  Permission Generator
+                </button>
+              </li>
+            </ul>
+
+            <div class="tab-content" id="outputTabContent">
+              <div
+                class="tab-pane fade show active"
+                id="outputJsonBlock"
+                role="tabpanel"
+                aria-labelledby="output-tab"
               >
-                <i id="copyIcon" class="fas fa-copy me-2"></i>
-                <span id="copyText">Copy</span>
-              </button>
+                <div class="mb-3">
+                  <div id="outputContainer">
+                    <pre><code id="outputJson" class="json"></code></pre>
+                  </div>
+                </div>
+                <div class="d-grid gap-2">
+                  <button
+                    id="copyButton"
+                    onclick="copyOutput()"
+                    class="btn btn-secondary"
+                  >
+                    <i id="copyIcon" class="fas fa-copy me-2"></i>
+                    <span id="copyText">Copy</span>
+                  </button>
+                </div>
+              </div>
+              <div
+                class="tab-pane fade"
+                id="permissionGenerator"
+                role="tabpanel"
+                aria-labelledby="permission-tab"
+              >
+                <div class="row mb-3">
+                  <div class="col-md-6">
+                    <label for="prefixSelect" class="form-label">Prefix</label>
+                    <select class="form-select" id="prefixSelect">
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                    </select>
+                  </div>
+                  <div class="col-md-6">
+                    <label for="groupNameSelect" class="form-label"
+                      >Group Name</label
+                    >
+                    <select class="form-select" id="groupNameSelect"></select>
+                  </div>
+                </div>
+                <div class="mb-3">
+                  <label for="permissionOutput" class="form-label"
+                    >Permissions CSV</label
+                  >
+                  <textarea
+                    class="form-control"
+                    id="permissionOutput"
+                    rows="10"
+                    readonly
+                  ></textarea>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -117,7 +208,7 @@
             <i class="fas fa-exclamation-circle"></i>
           </div>
           <div class="alert-message">
-            <h4>Invalid JSON Input</h4>
+            <h4>ERROR!</h4>
             <p id="alertMessage"></p>
           </div>
         </div>
@@ -125,6 +216,7 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="scripts/permissions.js"></script>
     <script src="scripts/script.js"></script>
     <script></script>
   </body>
