--- a/index.html
+++ b/index.html
@@ -30,13 +30,33 @@
           </h1>
           <form class="row g-3">
             <div class="col-md-12">
-              <label for="inputName" class="form-label">Collection Name</label>
+              <label for="inputJson" class="form-label"
+                >API Documentation URL <span class="text-danger">*</span></label
+              >
+              <input
+                class="form-control"
+                id="inputJson"
+                placeholder="Paste your API documentation URL here..."
+                required
+              />
+              <div class="invalid-feedback" id="inputJsonError">
+                API documentation URL is required
+              </div>
+            </div>
+            <div class="col-md-12">
+              <label for="inputName" class="form-label"
+                >Collection Name <span class="text-danger">*</span></label
+              >
               <input
                 type="text"
                 placeholder="Enter your collection name..."
                 class="form-control"
                 id="inputName"
+                required
               />
+              <div class="invalid-feedback" id="inputNameError">
+                Collection name is required
+              </div>
             </div>
             <div class="col-md-6">
               <div class="form-check mb-2">
@@ -82,25 +102,16 @@
                 />
               </div>
             </div>
-            <div class="col-md-12">
+            <div class="col-md-12 mb-3">
               <label for="inputPrivateKey" class="form-label"
                 >Private Key</label
               >
-              <input
-                type="password"
+              <textarea
                 placeholder="Enter your server private key..."
                 class="form-control"
-                id="inputPrivateKey"
-              />
-            </div>
-            <div class="col-md-12 mb-3">
-              <label for="inputJson" class="form-label">Input JSON</label>
-              <textarea
-                class="form-control"
-                id="inputJson"
-                rows="5"
+                rows="6"
                 style="resize: none"
-                placeholder="Paste your JSON here..."
+                id="inputPrivateKey"
               ></textarea>
             </div>
           </form>
@@ -155,12 +166,17 @@
                 </div>
                 <div class="d-grid gap-2">
                   <button
-                    id="copyButton"
-                    onclick="copyOutput()"
-                    class="btn btn-secondary"
+                    id="copyJsonButton"
+                    data-copy-target="outputJson"
+                    class="btn btn-secondary copy-button"
                   >
-                    <i id="copyIcon" class="fas fa-copy me-2"></i>
-                    <span id="copyText">Copy</span>
+                    <i
+                      class="fas fa-copy me-2 copy-icon"
+                      data-copy-target="outputJson"
+                    ></i>
+                    <span class="copy-text" data-copy-target="outputJson"
+                      >Copy</span
+                    >
                   </button>
                 </div>
               </div>
@@ -172,7 +188,9 @@
               >
                 <div class="row mb-3">
                   <div class="col-md-6">
-                    <label for="prefixSelect" class="form-label">Prefix</label>
+                    <label for="prefixSelect" class="form-label"
+                      >Prefix Code</label
+                    >
                     <select class="form-select" id="prefixSelect">
                       <option value="2">2</option>
                       <option value="3">3</option>
@@ -186,16 +204,30 @@
                     <select class="form-select" id="groupNameSelect"></select>
                   </div>
                 </div>
-                <div class="mb-3">
-                  <label for="permissionOutput" class="form-label"
-                    >Permissions CSV</label
+                <label for="permissionOutput" class="form-label"
+                  >Permissions CSV</label
+                >
+                <textarea
+                  class="form-control fw-light mb-3"
+                  style="overflow-x: auto; resize: none"
+                  id="permissionOutput"
+                  readonly
+                  rows="7"
+                ></textarea>
+                <div class="d-grid gap-2">
+                  <button
+                    id="copyPermissionButton"
+                    data-copy-target="permissionOutput"
+                    class="btn btn-secondary copy-button"
                   >
-                  <textarea
-                    class="form-control"
-                    id="permissionOutput"
-                    rows="10"
-                    readonly
-                  ></textarea>
+                    <i
+                      class="fas fa-copy me-2 copy-icon"
+                      data-copy-target="permissionOutput"
+                    ></i>
+                    <span class="copy-text" data-copy-target="permissionOutput"
+                      >Copy</span
+                    >
+                  </button>
                 </div>
               </div>
             </div>
@@ -216,8 +248,11 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="scripts/utils.js"></script>
+    <script src="scripts/ui.js"></script>
     <script src="scripts/permissions.js"></script>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/converter.js"></script>
+    <script src="scripts/main.js"></script>
     <script></script>
   </body>
 </html>
