--- a/index.html
+++ b/index.html
@@ -207,13 +207,7 @@
                 <label for="permissionOutput" class="form-label"
                   >Permissions CSV</label
                 >
-                <textarea
-                  class="form-control fw-light mb-3"
-                  style="overflow-x: auto; resize: none"
-                  id="permissionOutput"
-                  readonly
-                  rows="7"
-                ></textarea>
+                <div id="permissionOutput" class="csv-output mb-3"></div>
                 <div class="d-grid gap-2">
                   <button
                     id="copyPermissionButton"
